* Fixed order of Sign and Share buttons in container view
Implemented tabbar buttons ordering

MOPPIOS-175

Signed-off-by: Sander Hunt <sander.hunt@fob-solution.com>

--- a/MoppApp/MoppApp/Landing.storyboard
+++ b/MoppApp/MoppApp/Landing.storyboard
@@ -174,41 +174,8 @@
                                                     <outlet property="title" destination="ckz-6p-Acp" id="qnp-P9-GFj"/>
                                                 </connections>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sai-Rz-wOx" userLabel="SignButton" customClass="TabButton" customModule="MoppApp" customModuleProvider="target">
-                                                <rect key="frame" x="187.5" y="0.0" width="62.5" height="50"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oD2-eQ-zo1">
-                                                        <rect key="frame" x="0.0" y="0.0" width="62.5" height="50"/>
-                                                    </button>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SIGN CONTAINER" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flY-yF-y29">
-                                                        <rect key="frame" x="0.0" y="10.5" width="62.5" height="30.5"/>
-                                                        <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="13"/>
-                                                        <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                </subviews>
-                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                <accessibility key="accessibilityConfiguration" identifier="signButton"/>
-                                                <constraints>
-                                                    <constraint firstItem="oD2-eQ-zo1" firstAttribute="top" secondItem="Sai-Rz-wOx" secondAttribute="top" id="8MD-8K-fX8"/>
-                                                    <constraint firstItem="oD2-eQ-zo1" firstAttribute="leading" secondItem="Sai-Rz-wOx" secondAttribute="leading" id="LIF-9M-fkb"/>
-                                                    <constraint firstAttribute="trailing" secondItem="flY-yF-y29" secondAttribute="trailing" id="Put-1s-E4Q"/>
-                                                    <constraint firstItem="flY-yF-y29" firstAttribute="leading" secondItem="Sai-Rz-wOx" secondAttribute="leading" id="ehK-Ev-i5W"/>
-                                                    <constraint firstAttribute="bottom" secondItem="oD2-eQ-zo1" secondAttribute="bottom" id="rBq-Uy-tb7"/>
-                                                    <constraint firstItem="flY-yF-y29" firstAttribute="centerY" secondItem="Sai-Rz-wOx" secondAttribute="centerY" id="tVb-XH-oDe"/>
-                                                    <constraint firstAttribute="trailing" secondItem="oD2-eQ-zo1" secondAttribute="trailing" id="wzU-15-5lD"/>
-                                                </constraints>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="tab" value="NO"/>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="tab-sign-button"/>
-                                                </userDefinedRuntimeAttributes>
-                                                <connections>
-                                                    <outlet property="button" destination="oD2-eQ-zo1" id="yyJ-Mc-9Wz"/>
-                                                    <outlet property="title" destination="flY-yF-y29" id="1DC-Os-oHC"/>
-                                                </connections>
-                                            </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uIu-AD-w9S" userLabel="ShareButton" customClass="TabButton" customModule="MoppApp" customModuleProvider="target">
-                                                <rect key="frame" x="250" y="0.0" width="62.5" height="50"/>
+                                                <rect key="frame" x="187.5" y="0.0" width="62.5" height="50"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D7z-3P-MfZ">
                                                         <rect key="frame" x="0.0" y="0.0" width="62.5" height="50"/>
@@ -240,6 +207,39 @@
                                                 <connections>
                                                     <outlet property="button" destination="D7z-3P-MfZ" id="wlG-0j-A4U"/>
                                                     <outlet property="title" destination="qmQ-pj-mTP" id="AC5-pm-1JA"/>
+                                                </connections>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sai-Rz-wOx" userLabel="SignButton" customClass="TabButton" customModule="MoppApp" customModuleProvider="target">
+                                                <rect key="frame" x="250" y="0.0" width="62.5" height="50"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oD2-eQ-zo1">
+                                                        <rect key="frame" x="0.0" y="0.0" width="62.5" height="50"/>
+                                                    </button>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SIGN CONTAINER" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flY-yF-y29">
+                                                        <rect key="frame" x="0.0" y="10.5" width="62.5" height="30.5"/>
+                                                        <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="13"/>
+                                                        <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <accessibility key="accessibilityConfiguration" identifier="signButton"/>
+                                                <constraints>
+                                                    <constraint firstItem="oD2-eQ-zo1" firstAttribute="top" secondItem="Sai-Rz-wOx" secondAttribute="top" id="8MD-8K-fX8"/>
+                                                    <constraint firstItem="oD2-eQ-zo1" firstAttribute="leading" secondItem="Sai-Rz-wOx" secondAttribute="leading" id="LIF-9M-fkb"/>
+                                                    <constraint firstAttribute="trailing" secondItem="flY-yF-y29" secondAttribute="trailing" id="Put-1s-E4Q"/>
+                                                    <constraint firstItem="flY-yF-y29" firstAttribute="leading" secondItem="Sai-Rz-wOx" secondAttribute="leading" id="ehK-Ev-i5W"/>
+                                                    <constraint firstAttribute="bottom" secondItem="oD2-eQ-zo1" secondAttribute="bottom" id="rBq-Uy-tb7"/>
+                                                    <constraint firstItem="flY-yF-y29" firstAttribute="centerY" secondItem="Sai-Rz-wOx" secondAttribute="centerY" id="tVb-XH-oDe"/>
+                                                    <constraint firstAttribute="trailing" secondItem="oD2-eQ-zo1" secondAttribute="trailing" id="wzU-15-5lD"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="tab" value="NO"/>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="tab-sign-button"/>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <outlet property="button" destination="oD2-eQ-zo1" id="yyJ-Mc-9Wz"/>
+                                                    <outlet property="title" destination="flY-yF-y29" id="1DC-Os-oHC"/>
                                                 </connections>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zZy-Vl-dNV" userLabel="EncryptButton" customClass="TabButton" customModule="MoppApp" customModuleProvider="target">
@@ -305,6 +305,7 @@
                     </view>
                     <connections>
                         <outlet property="buttonBarView" destination="FFs-YW-Nvy" id="HHR-D3-X3O"/>
+                        <outlet property="buttonsStackView" destination="90N-hi-Cjm" id="wOr-2F-EX4"/>
                         <outlet property="containerView" destination="PKn-M4-JkH" id="CWY-cK-fLN"/>
                         <outlet property="containerViewBottomCSTR" destination="137-iC-9Gn" id="fwy-8z-oap"/>
                         <outlet property="containerViewButtonBarCSTR" destination="gLS-pp-3mc" id="n9I-NF-DNL"/>
