--- a/MoppApp/MoppApp/LaunchScreen.xib
+++ b/MoppApp/MoppApp/LaunchScreen.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,10 +28,10 @@
                         <constraint firstAttribute="width" constant="240" id="yge-QE-ZZl"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Struktuurifondid" translatesAutoresizingMaskIntoConstraints="NO" id="ktb-J3-ngC">
-                    <rect key="frame" x="0.0" y="567" width="375" height="100"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Struktuurifondid" translatesAutoresizingMaskIntoConstraints="NO" id="ktb-J3-ngC">
+                    <rect key="frame" x="0.0" y="549" width="375" height="110"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="R0U-DD-9Zx"/>
+                        <constraint firstAttribute="height" constant="110" id="R0U-DD-9Zx"/>
                     </constraints>
                 </imageView>
             </subviews>
@@ -42,7 +41,7 @@
                 <constraint firstItem="eDH-N0-191" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="MW3-T4-fq7"/>
                 <constraint firstAttribute="trailing" secondItem="ktb-J3-ngC" secondAttribute="trailing" id="Umy-cx-rxz"/>
                 <constraint firstItem="9jh-n5-N83" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="YRa-O5-60o"/>
-                <constraint firstAttribute="bottom" secondItem="ktb-J3-ngC" secondAttribute="bottom" id="iCl-fZ-zI0"/>
+                <constraint firstAttribute="bottom" secondItem="ktb-J3-ngC" secondAttribute="bottom" constant="8" id="iCl-fZ-zI0"/>
                 <constraint firstAttribute="trailing" secondItem="9jh-n5-N83" secondAttribute="trailing" id="tpW-vp-Roo"/>
                 <constraint firstItem="ktb-J3-ngC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wkc-CA-pqd"/>
                 <constraint firstItem="eDH-N0-191" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="xC6-Gu-w7w"/>
@@ -52,7 +51,7 @@
     </objects>
     <resources>
         <image name="Logo_Suur" width="144" height="178"/>
-        <image name="Struktuurifondid" width="111" height="61"/>
+        <image name="Struktuurifondid" width="1024" height="593"/>
         <image name="bg_mobile" width="320" height="255"/>
     </resources>
 </document>
